--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,15 @@
 .App {
   text-align: center;
+  height: 100%;
+  width: 100%;
+}
+
+html, body, #app, #app>div {
+  height: 100%;
+}
+.main {
+  height: 100%;
+  width: 100%;
 }
 
 .App-logo {
