members page ready

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,21 @@
-.App {
-  text-align: center;
+.main-wrapper {
+  display: grid;
+  grid-template-rows: 8% 92%;
   height: 100%;
   width: 100%;
+  overflow: hidden;
+}
+
+.main-toolbar {
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+
+.App {
+  text-align: center;
+  overflow: scroll;
+  grid-row-start: 2;
+  grid-row-end: 3;
 }
 
 html, body, #app, #app>div {
@@ -10,34 +24,4 @@ html, body, #app, #app>div {
 .main {
   height: 100%;
   width: 100%;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
