--- a/frontend/src/home/home.css
+++ b/frontend/src/home/home.css
@@ -15,10 +15,7 @@
 }
 
 .toolbar {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  grid-row-start:1;
-  grid-row-end: 2;
+  width: 100%;
 }
 
 .toolbar-details {
@@ -26,19 +23,22 @@
   box-shadow: 5px 3px 3px gray;
   display: grid;
   grid-template-columns: 10% auto 15%;
+  grid-template-rows:100%;
+  height: 100%; 
 }
 
 .toolbar-auth-btn {
   grid-column-start: 3;
   grid-column-end: 4;
   align-self: center;
+  justify-self: center;
 }
 
 .toolbar-menu {
   grid-column-start: 1;
   grid-column-end: 2;
   align-self: center;
-  width: 15em;
+  justify-self: center;
 }
 
 .toolbar-title {
